@startuml ViewCommandArchitectureDiagram
package "seedu.command" {
    class ViewCommand {
        +execute(args: String[])
        +handleViewById(id: int)
        +handleViewByKeyword(args: String[])
    }
}

package "seedu.model" {
    class Inventory
}

package "seedu.ui" {
    class Ui
}

ViewCommand --> Inventory : accesses
ViewCommand --> Ui : displays
@enduml
